--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
-  text-align: center;
   display: flex;
   justify-content: center;
-  align-items: center;
+  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
+  width: 100%;
   flex-direction: column;
+  align-items: center;
 }
